upgrade of the fendi page

--- a/fendi_page.html
+++ b/fendi_page.html
@@ -7,6 +7,45 @@
   <title>Fendi page</title>
 </head>
 <body>
-  
+
+  <header>
+    <h1>Fendi MTO Service</h1>
+    <p>Redesign the proces of creating new personalized bags for Fendi clients.</p>
+  </header>
+
+  <main>
+    <section>
+      <div>
+        <h2>Year</h2>
+        <ul>
+          <li>2019</li>
+        </ul>
+      </div>
+
+      <div>
+        <h2>Deliverable</h2>
+        <ul>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
+      </div>
+      
+      <img src="#" alt="#">
+    </section>
+
+    <section>
+      <img src="#" alt="#">
+      <img src="#" alt="#">
+      <img src="#" alt="#">
+      <img src="#" alt="#">
+      <img src="#" alt="#">
+    </section>
+  </main>
+
+
+
+
+
+
 </body>
 </html>
