--- a/fendi_page.html
+++ b/fendi_page.html
@@ -30,22 +30,17 @@
         </ul>
       </div>
       
-      <img src="#" alt="#">
+      <img src="image/Fendi/Fendi_splash_image.JPG" alt="Fendi_splash_image">
     </section>
 
     <section>
-      <img src="#" alt="#">
-      <img src="#" alt="#">
-      <img src="#" alt="#">
-      <img src="#" alt="#">
-      <img src="#" alt="#">
+      <img src="image/Fendi/Fendi_with_Ipad.png" alt="Fendi_with_Ipad">
+      <img src="image/Fendi/Fendi_selector.png" alt="Fendi_selector">
+      <img src="image/Fendi/Fendi_with_Ipad_3.png" alt="Fendi:_with_Ipad_3">
+      <img src="image/Fendi/Fendi_with_Ipad2.png" alt="Fendi_with_Ipad2">
+      <img src="image/Fendi/Fendi_with_Ipad4.png" alt="Fendi_form">
     </section>
   </main>
-
-
-
-
-
 
 </body>
 </html>
