--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Fendi MTO Service</h2>
         <p>Redesign the process of creating new personalized bags for Fendi clients.</p>
         <a href="">See the project</a>
-        <img src="#" alt="#">
+        <img src="image/Fendi/Fendi_splash_image.JPG" alt="Fendi_splash_image">
       </article>
   
     </section>
