--- a/the_fork_page.html
+++ b/the_fork_page.html
@@ -14,34 +14,36 @@
   </header>
 
   <main>
-      <section>
-        <div>
-          <h2>Year</h2>
-          <ul>
-            <li>2019</li>
-          </ul>
-        </div>
-  
-        <div>
-          <h2>Deliverable</h2>
-          <ul>
-            <li>UX Design</li>
-            <li>UI Design</li>
-          </ul>
-        </div>
-        
-        <img src="#" alt="#">
-      </section>
-  
-      <section>
-        <img src="#" alt="#">
-        <img src="#" alt="#">
-        <img src="#" alt="#">
-        <img src="#" alt="#">
-        <img src="#" alt="#">
-      </section>
-    </main>
+    <section>
+      <div>
+        <h2>Year</h2>
+        <ul>
+          <li>2019</li>
+        </ul>
+      </div>
 
+      <div>
+        <h2>Deliverable</h2>
+        <ul>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
+      </div>
+      
+      <img src="image/The Fork/Main_the_fork.png" alt="Main_the_fork">
+    </section>
+
+    <section>
+      <img src="image/The Fork/Restaurant_the_fork.png" alt="Restaurant_the_fork">
+      <img src="image/The Fork/Profile_the_fork.png" alt="Profile_the_fork">
+      <img src="image/The Fork/Map_the_fork.png" alt="Map_the_fork">
+      <img src="image/The Fork/Rating_the_fork.png" alt="Rating_the_fork">
+    </section>
+  </main>
+
+  <footer>
+    <a href="index.html">Back to main</a>
+  </footer>
 
 </body>
 </html>
