adding new items

--- a/fendi_page.html
+++ b/fendi_page.html
@@ -33,12 +33,12 @@
       <img src="image/Fendi/Fendi_splash_image.JPG" alt="Fendi_splash_image">
     </section>
 
-    <section>
-      <img src="image/Fendi/Fendi_with_Ipad.png" alt="Fendi_with_Ipad">
-      <img src="image/Fendi/Fendi_selector.png" alt="Fendi_selector">
-      <img src="image/Fendi/Fendi_with_Ipad_3.png" alt="Fendi:_with_Ipad_3">
-      <img src="image/Fendi/Fendi_with_Ipad2.png" alt="Fendi_with_Ipad2">
-      <img src="image/Fendi/Fendi_with_Ipad4.png" alt="Fendi_form">
+    <section class="project_list">
+      <img class="project_img" src="image/Fendi/Fendi_with_Ipad.png" alt="Fendi_with_Ipad">
+      <img class="project_img" src="image/Fendi/Fendi_selector.png" alt="Fendi_selector">
+      <img class="project_img" src="image/Fendi/Fendi_with_Ipad_3.png" alt="Fendi:_with_Ipad_3">
+      <img class="project_img" src="image/Fendi/Fendi_with_Ipad2.png" alt="Fendi_with_Ipad2">
+      <img class="project_img" src="image/Fendi/Fendi_with_Ipad4.png" alt="Fendi_form">
     </section>
   </main>
 
