--- a/videomaking_page.html
+++ b/videomaking_page.html
@@ -16,27 +16,29 @@
   <main>
     <section>
       <div>  
-          <h3>Year</h3>
-          <ul>
-            <li>2017-Now</li>
-          </ul>
-        </div>
+        <h3>Year</h3>
+        <ul>
+          <li>2017-Now</li>
+        </ul>
+      </div>
+    
+      <div>
+        <h3>Deliverable</h3>
+        <ul>
+          <li>Production</li>
+          <li>Rec</li>
+          <li>Color Grading</li>
+          <li>Visual Effects</li>
+        </ul>
+      </div> 
       
-        <div>
-          <h3>Deliverable</h3>
-          <ul>
-            <li>Production</li>
-            <li>Rec</li>
-            <li>Color Grading</li>
-            <li>Visual Effects</li>
-          </ul>
-        </div> 
-
       <img src="#" alt="#">
+
     </section>
 
     <section>
-      <img src="" alt="">
+      <img src="image/Videomaking/backgorund_project.png" alt="splash page">
+      <a href="https://www.youtube.com/watch?v=Agjj5b88GcA">Go See It</a>
       <img src="" alt="">
       <img src="" alt="">
       <img src="" alt="">
