--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#contact">Who</a>
     </nav>
 
-    <div>
+    <div class="my_name">
       <h1>Matteo <em>Cordiner</em></h1>
     </div>
   </header>
