--- a/fendi_page.html
+++ b/fendi_page.html
@@ -5,24 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fendi page (Portfolio)</title>
+  <link rel="stylesheet" href="CSS/style_fendi.css">
 </head>
 <body>
 
-  <header>
-    <h1>Fendi MTO Service</h1>
+  <header class="project_page_header">
+    <h1 class="project_page_title">Fendi MTO Service</h1>
     <p>Redesign the proces of creating new personalized bags for Fendi clients.</p>
   </header>
 
   <main>
-    <section>
-      <div>
+    <section class="project_page_project_header">
+      <div class="project_page_project_description">
         <h2>Year</h2>
         <ul>
           <li>2019</li>
         </ul>
       </div>
 
-      <div>
+      <div class="project_page_project_description">
         <h2>Deliverable</h2>
         <ul>
           <li>UX Design</li>
@@ -30,20 +31,20 @@
         </ul>
       </div>
       
-      <img src="image/Fendi/Fendi_splash_image.JPG" alt="Fendi_splash_image">
+      <img class="project_page_description_img" src="image/Fendi/Fendi_splash_page.png" alt="Fendi_splash_image">
     </section>
 
-    <section class="project_list">
-      <img class="project_img" src="image/Fendi/Fendi_with_Ipad.png" alt="Fendi_with_Ipad">
-      <img class="project_img" src="image/Fendi/Fendi_selector.png" alt="Fendi_selector">
-      <img class="project_img" src="image/Fendi/Fendi_with_Ipad_3.png" alt="Fendi:_with_Ipad_3">
-      <img class="project_img" src="image/Fendi/Fendi_with_Ipad2.png" alt="Fendi_with_Ipad2">
-      <img class="project_img" src="image/Fendi/Fendi_with_Ipad4.png" alt="Fendi_form">
+    <section class="project_page_project_list">
+      <img class="project_page_project_img" src="image/Fendi/Fendi_with_Ipad.png" alt="Fendi_with_Ipad">
+      <img class="project_page_project_img" src="image/Fendi/Fendi_selector.png" alt="Fendi_selector">
+      <img class="project_page_project_img" src="image/Fendi/Fendi_with_Ipad_3.png" alt="Fendi:_with_Ipad_3">
+      <img class="project_page_project_img" src="image/Fendi/Fendi_with_Ipad2.png" alt="Fendi_with_Ipad2">
+      <img class="project_page_project_img" src="image/Fendi/Fendi_with_Ipad4.png" alt="Fendi_form">
     </section>
   </main>
 
-  <footer>
-    <a href="index.html">Back to main</a>
+  <footer class="project_page_footer">
+    <a class="back_to_main" href="index.html">Back to main</a>
   </footer>
 
 </body>
