--- a/svolta_page.html
+++ b/svolta_page.html
@@ -5,24 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Svolta page</title>
+  <link rel="stylesheet" href="CSS/style_fendi.css">
 </head>
 <body>
 
-  <header>
-    <h1>Svolta</h1>
-    <p>Svolta is a project for a E-Bike Sharing service for the city of Rome, done with different departement at the European Institute of Design (IED) in Rome.</p>
+  <header class="project_page_header">
+    <h1 class="project_page_title">Svolta</h1>
+    <p class="project_page_p">Svolta is a project for a E-Bike Sharing service for the city of Rome, done with different departement at the European Institute of Design (IED) in Rome.</p>
   </header>
 
   <main>
-    <section>
-      <div>
+    <section class="project_page_project_header">
+      <div class="project_page_project_description">
         <h2>Year</h2>
         <ul>
           <li>2018</li>
         </ul>
       </div>
 
-      <div>
+      <div class="project_page_project_description">
         <h2>Deliverable</h2>
         <ul>
           <li>Product Design</li>
@@ -30,19 +31,19 @@
         </ul>
       </div>
       
-      <img src="image/Svolta/render 1.png" alt="render_1">
+      <img class="project_page_description_img_svolta" src="image/Svolta/render 1.png" alt="render_1">
     </section>
 
-    <section>
-      <img src="image/Svolta/render 2.png" alt="render_2">
-      <img src="image/Svolta/render 8.png" alt="render_8">
-      <img src="image/Svolta/render 9.png" alt="render_9">
-      <img src="image/Svolta/render 10.png" alt="render_10">
+    <section class="project_page_project_list">
+      <img class="project_page_project_img" src="image/Svolta/render 2.png" alt="render_2">
+      <img class="project_page_project_img" src="image/Svolta/render 8.png" alt="render_8">
+      <img class="project_page_project_img" src="image/Svolta/render 9.png" alt="render_9">
+      <img class="project_page_project_img" src="image/Svolta/render 10.png" alt="render_10">
     </section>
   </main>
     
-  <footer>
-    <a href="index.html">Back to main</a>
+  <footer class="project_page_footer">
+    <a class="back_to_main" href="index.html">Back to main</a>
   </footer>
 
 </body>
