--- a/fendi_page.html
+++ b/fendi_page.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fendi page (Portfolio)</title>
-  <link rel="stylesheet" href="CSS/style_fendi.css">
+  <link rel="stylesheet" href="CSS/style_projects.css">
 </head>
 <body>
 
