--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navigation_page">
       <a href="#intro">Intro</a>
       <a href="#work">Work</a>
-      <a href="#contact">Who</a>
+      <a href="about_me.html">Who</a>
     </nav>
 
     <div class="my_name">
@@ -152,6 +152,7 @@
 
   </main>  
 
+  <!-- 
   <footer>
     <section class="footer_part">
       <div class="footer_description">
@@ -170,6 +171,7 @@
       <li class="contact"><a class="link_footer" href="https://www.linkedin.com/in/matteo-cordiner-31360b14b/"><img class="contact_img" src="image/icons/linkedin_icon.png" alt="linkedin_icon"></a></li>
     </ul>
   </footer>
+  -->
 
 </body>
 </html>
