--- a/the_fork_page.html
+++ b/the_fork_page.html
@@ -5,24 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>The Fork Page (Portfolio)</title>
+  <link rel="stylesheet" href="CSS/style_projects.css">
 </head>
 <body>
 
-  <header>
-    <h1>The Fork</h1>
+  <header  class="project_page_header">
+    <h1 class="project_page_title">The Fork</h1>
     <p>Redesign the proces of creating new personalized bags for Fendi clients.</p>
   </header>
 
   <main>
-    <section>
-      <div>
+    <section  class="project_page_project_header">
+      <div class="project_page_project_description">
         <h2>Year</h2>
         <ul>
           <li>2019</li>
         </ul>
       </div>
 
-      <div>
+      <div class="project_page_project_description">
         <h2>Deliverable</h2>
         <ul>
           <li>UX Design</li>
@@ -30,19 +31,19 @@
         </ul>
       </div>
       
-      <img src="image/The Fork/Main_the_fork.png" alt="Main_the_fork">
+      <img class="project_page_description_img" src="image/The Fork/Main_the_fork.png" alt="Main_the_fork">
     </section>
 
-    <section>
-      <img src="image/The Fork/Restaurant_the_fork.png" alt="Restaurant_the_fork">
-      <img src="image/The Fork/Profile_the_fork.png" alt="Profile_the_fork">
-      <img src="image/The Fork/Map_the_fork.png" alt="Map_the_fork">
-      <img src="image/The Fork/Rating_the_fork.png" alt="Rating_the_fork">
+    <section class="project_page_project_list">
+      <img class="project_page_project_img" src="image/The Fork/Restaurant_the_fork.png" alt="Restaurant_the_fork">
+      <img class="project_page_project_img" src="image/The Fork/Profile_the_fork.png" alt="Profile_the_fork">
+      <img class="project_page_project_img" src="image/The Fork/Map_the_fork.png" alt="Map_the_fork">
+      <img class="project_page_project_img" src="image/The Fork/Rating_the_fork.png" alt="Rating_the_fork">
     </section>
   </main>
 
-  <footer>
-    <a href="index.html">Back to main</a>
+  <footer class="project_page_footer">
+    <a class="back_to_main" href="index.html">Back to main</a>
   </footer>
 
 </body>
