--- a/videomaking_page.html
+++ b/videomaking_page.html
@@ -5,24 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Videomaking page</title>
+  <link rel="stylesheet" href="CSS/style_projects.css">
 </head>
 <body>
   
-  <header>
-    <h1>Videomaking</h1>
-    <p>###</p>
+  <header class="project_page_header">
+    <h1 class="project_page_title">Videomaking</h1>
+    <p>This is the section about my personal musical-videos, I've had clients in Rome, Latina and Sabaudia. Hope you'll enjoy</p>
   </header>
   
   <main>
-    <section>
-      <div>  
+    <section class="project_page_project_header">
+      <div class="project_page_project_description">  
         <h3>Year</h3>
         <ul>
           <li>2017-Now</li>
         </ul>
       </div>
     
-      <div>
+      <div class="project_page_project_description">
         <h3>Deliverable</h3>
         <ul>
           <li>Production</li>
@@ -32,21 +33,26 @@
         </ul>
       </div> 
       
-      <img src="#" alt="#">
+      <img class="project_page_description_img" src="image/Videomaking/Splash_page.JPG" alt="Splash_page">
 
     </section>
 
-    <section>
-      <img src="image/Videomaking/backgorund_project.png" alt="splash page">
-      <a href="https://www.youtube.com/watch?v=Agjj5b88GcA">Go See It</a>
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+    <section class="project_page_project_list">
+      <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/Splash_page.JPG" alt="splash page">
+      <a class="go_see_it" href="https://www.youtube.com/watch?v=Agjj5b88GcA">Go See It</a>
+      <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/screen_video.JPG" alt="giostra">
+      <a class="go_see_it" href="https://www.youtube.com/watch?v=zQntF4w8eVA">Go See It</a>
+      <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/screen_video_2.JPG" alt="propaganda">
+      <a class="go_see_it" href="https://www.youtube.com/watch?v=lFpuFqTuxcM&t=23s">Go See It</a>
+      <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/screen_video_3.JPG" alt="sbackisback">
+      <a class="go_see_it" href="https://www.youtube.com/watch?v=R-2Fbn8C5AM">Go See It</a>
+      <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/screen_video_4.JPG" alt="falco">
+      <a class="go_see_it" href="https://www.youtube.com/watch?v=CcfZ8qAnV6U">Go See It</a>
     </section>
   </main>
 
-  <footer>
-    <a href="index.html">Back to main</a>
+  <footer  class="project_page_footer">
+    <a class="back_to_main" href="index.html">Back to main</a>
   </footer>
 
 </body>
