--- a/index.html
+++ b/index.html
@@ -149,29 +149,11 @@
       <img class="project_img img_videomaking" src="image/Videomaking/Splash_page.JPG" alt="background_project">      
     </div>
       
-
   </main>  
 
-  <!-- 
   <footer>
-    <section class="footer_part">
-      <div class="footer_description">
-        <h2 class="footer_title" id="who"><em>Matteo Cordiner</em></h2>
-        <p class="footer_text">I am a 22 years old guy from Rome. my background is in Product Design done in Rome at the IED (European Institut of Design).
-        Right now i am doing a master in Web and Digital Design in Milan at the Scuola Politecnica di Design.
-        I look to become a UX/UI Designer and in future to develop my own business thanks to my new skills owned during the Master. </p>
-      </div>
-
-      <img class="footer_img" src="i#" alt="profile_img">
-    </section>
-    
-    <ul class="contact_list" id="contact">
-      <li class="contact"><a class="link_footer" href="mailto:matteo.cordiner@gmail.com"><img class="contact_img" src="image/icons/mail_icon.png" alt="mail_icon"></a></li>
-      <li class="contact"><a class="link_footer" href="https://www.instagram.com/matteo.cordiner/"><img class="contact_img" src="image/icons/instagram_icon.png" alt="instagram_icon"></a></li>
-      <li class="contact"><a class="link_footer" href="https://www.linkedin.com/in/matteo-cordiner-31360b14b/"><img class="contact_img" src="image/icons/linkedin_icon.png" alt="linkedin_icon"></a></li>
-    </ul>
+    <a class="to_top_link" href="#top">Top<a>
   </footer>
-  -->
 
 </body>
 </html>
