--- a/about_me.html
+++ b/about_me.html
@@ -10,7 +10,7 @@
 <body>
 
   <main class="footer_part">
-    <section>
+    <section class="my_description">
       <div class="footer_description">
         <h2 class="footer_title" id="who"><em>Matteo Cordiner</em></h2>
         <p class="footer_text">I am 22 years old from Rome. I studied Product Design done in Rome at the IED (European Institut of Design). Where i took a bachelor degree.
@@ -21,13 +21,7 @@
       <img class="footer_img" src="image/profile_img.jpg" alt="profile_img">
     </section>
       
-    <ul class="contact_list" id="contact">
-      <li class="contact"><a class="link_footer" href="mailto:matteo.cordiner@gmail.com"><img class="contact_img" src="image/icons/mail_icon.png" alt="mail_icon"></a></li>
-      <li class="contact"><a class="link_footer" href="https://www.instagram.com/matteo.cordiner/"><img class="contact_img" src="image/icons/instagram_icon.png" alt="instagram_icon"></a></li>
-      <li class="contact"><a class="link_footer" href="https://www.linkedin.com/in/matteo-cordiner-31360b14b/"><img class="contact_img" src="image/icons/linkedin_icon.png" alt="linkedin_icon"></a></li>
-    </ul>
-
-    <span><a class="back_to_main" href="index.html">Back to main</a></span>
+    <div><a class="back_to_main" href="index.html">Back to main</a></div>
 </main>
 
 </body>
