--- a/the_fork_page.html
+++ b/the_fork_page.html
@@ -15,7 +15,7 @@
   </header>
 
   <main>
-    <section  class="project_page_project_header">
+    <section  class="project_page_project_header project_page_project_header_thefork ">
       <div class="project_page_project_description">
         <h2>Year</h2>
         <ul>
@@ -31,7 +31,7 @@
         </ul>
       </div>
       
-      <img class="project_page_description_img" src="image/The Fork/Main_the_fork.png" alt="Main_the_fork">
+      <img class="project_page_description_img project_page_description_img_thefork" src="image/The Fork/Main_the_fork.png" alt="Main_the_fork">
     </section>
 
     <section class="project_page_project_list">
@@ -43,7 +43,7 @@
   </main>
 
   <footer class="project_page_footer">
-    <a class="back_to_main" href="index.html">Back to main</a>
+    <a class="back_to_main back_to_main_thefork" href="index.html">Back to main</a>
   </footer>
 
 </body>
