--- a/videomaking_page.html
+++ b/videomaking_page.html
@@ -15,7 +15,7 @@
   </header>
   
   <main>
-    <section class="project_page_project_header">
+    <section class="project_page_project_header project_page_project_header_video">
       <div class="project_page_project_description">  
         <h3>Year</h3>
         <ul>
@@ -52,7 +52,7 @@
   </main>
 
   <footer  class="project_page_footer">
-    <a class="back_to_main" href="index.html">Back to main</a>
+    <a class="back_to_main back_to_main_video" href="index.html">Back to main</a>
   </footer>
 
 </body>
