--- a/svolta_page.html
+++ b/svolta_page.html
@@ -15,7 +15,7 @@
   </header>
 
   <main>
-    <section class="project_page_project_header">
+    <section class="project_page_project_header project_page_project_header_svolta">
       <div class="project_page_project_description">
         <h2>Year</h2>
         <ul>
@@ -31,7 +31,7 @@
         </ul>
       </div>
       
-      <img class="project_page_description_img_svolta" src="image/Svolta/render 1.png" alt="render_1">
+      <img class="project_page_description_img project_page_description_img_svolta" src="image/Svolta/render 1.png" alt="render_1">
     </section>
 
     <section class="project_page_project_list">
@@ -43,7 +43,7 @@
   </main>
     
   <footer class="project_page_footer">
-    <a class="back_to_main" href="index.html">Back to main</a>
+    <a class="back_to_main back_to_main_svolta" href="index.html">Back to main</a>
   </footer>
 
 </body>
