--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <header>
     <nav class="navigation_page">
-      <a href="#intro">Intro</a>
-      <a href="#work">Work</a>
-      <a href="about_me.html">Who</a>
+      <a id="intro" href="#intro">Intro</a>
+      <a id="work" href="#work">Work</a>
+      <a id="who" href="about_me.html">Who</a>
     </nav>
 
     <div class="my_name">
