--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </div>
   </header>
   
-  <h2 class="intro_text" id="intro">Welcome on my portfolio. Here you can find all my professional information and projects.</h2>
+  <h2 class="intro_text">Welcome on my portfolio. Here you can find all my professional information and projects.</h2>
   
   <main class="project-page">  
 
     <!-- first project -->
     
-    <h2 class="work_title" id="work"><strong>Work.</strong></h2>
+    <h2 class="work_title"><strong>Work.</strong></h2>
   
     <section class="project 1_project j-project1">
 
