--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <header>
     <nav class="navigation_page">
-      <a id="intro" href="#intro">Intro</a>
-      <a id="work" href="#work">Work</a>
-      <a id="who" href="about_me.html">Who</a>
+      <a id="j-intro" href="#intro">Intro</a>
+      <a id="j-work" href="#work">Work</a>
+      <a id="j-who" href="about_me.html">Who</a>
     </nav>
 
     <div class="my_name">
@@ -20,14 +20,18 @@
     </div>
   </header>
   
-  <h2 class="intro_text">Welcome on my portfolio. Here you can find all my professional information and projects.</h2>
-  
+  <div class="intro j-intro_trigger" id="intro">
+    <h2 class="intro_text" id="j-intro_text">Welcome to my portfolio. Here you can find all my professional information and projects.</h2>
+  </div>
+
   <main class="project-page">  
 
     <!-- first project -->
     
-    <h2 class="work_title"><strong>Work.</strong></h2>
-  
+    <div class="work_section" id="j-work_trigger">
+      <h2 class="work_title" id="j-work_title"><strong>Work.</strong></h2>
+    </div>
+
     <section class="project 1_project j-project1">
 
       <div class="info info_date">
