--- a/fendi_page.html
+++ b/fendi_page.html
@@ -31,7 +31,7 @@
         </ul>
       </div>
       
-      <img class="project_page_description_img" src="image/Fendi/Fendi_splash_page.png" alt="Fendi_splash_image">
+      <img class="project_page_description_img j-projectpg_fendi_img" src="image/Fendi/Fendi_splash_page.png" alt="Fendi_splash_image">
     </section>
 
     <section class="project_page_project_list">
@@ -46,6 +46,14 @@
   <footer class="project_page_footer">
     <a class="back_to_main" href="index.html">Back to main</a>
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineMax.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+
+  <script src="Script/fendi_page_animation.js"></script>
 
 </body>
 </html>
