--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
   <main class="footer_part">
     <section class="my_description">
       <div class="footer_description">
-        <h2 class="footer_title" id="who"><em>Matteo Cordiner</em></h2>
+        <h2 class="footer_title" id="who">Matteo <em>Cordiner</em></h2>
         <p class="footer_text">I am 22 years old from Rome. I studied Product Design done in Rome at the IED (European Institut of Design). Where i took a bachelor degree.
         Now i am doing a master in Web and Digital Design in Milan at the Scuola Politecnica di Design.
         I look to become a UX/UI Designer and to develop my own business thanks to the new skills owned during this Master. </p>
