--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
 
     <div class="my_name">
-      <h1>Matteo <em>Cordiner</em></h1>
+      <h1 class="me">Matteo <em>Cordiner</em></h1>
     </div>
   </header>
   
