--- a/videomaking_page.html
+++ b/videomaking_page.html
@@ -33,11 +33,11 @@
         </ul>
       </div> 
       
-      <img class="project_page_description_img" src="image/Videomaking/Splash_page.JPG" alt="Splash_page">
+      <img class="project_page_description_img project_page_description_img_video" src="image/Videomaking/Splash_page.JPG" alt="Splash_page">
 
     </section>
 
-    <section class="project_page_project_list">
+    <section class="project_page_project_list ">
       <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/Splash_page.JPG" alt="splash page">
       <a class="go_see_it" href="https://www.youtube.com/watch?v=Agjj5b88GcA">Go See It</a>
       <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/screen_video.JPG" alt="giostra">
