--- a/the_fork_page.html
+++ b/the_fork_page.html
@@ -35,10 +35,10 @@
     </section>
 
     <section class="project_page_project_list">
-      <img class="project_page_project_img" src="image/The Fork/Restaurant_the_fork.png" alt="Restaurant_the_fork">
-      <img class="project_page_project_img" src="image/The Fork/Profile_the_fork.png" alt="Profile_the_fork">
-      <img class="project_page_project_img" src="image/The Fork/Map_the_fork.png" alt="Map_the_fork">
-      <img class="project_page_project_img" src="image/The Fork/Rating_the_fork.png" alt="Rating_the_fork">
+      <img class="project_page_project_img project_page_project_img_thefork" src="image/The Fork/Restaurant_the_fork.png" alt="Restaurant_the_fork">
+      <img class="project_page_project_img project_page_project_img_thefork" src="image/The Fork/Profile_the_fork.png" alt="Profile_the_fork">
+      <img class="project_page_project_img project_page_project_img_thefork" src="image/The Fork/Map_the_fork.png" alt="Map_the_fork">
+      <img class="project_page_project_img project_page_project_img_thefork" src="image/The Fork/Rating_the_fork.png" alt="Rating_the_fork">
     </section>
   </main>
 
