--- a/pingo_page.html
+++ b/pingo_page.html
@@ -15,7 +15,7 @@
   </header>
 
   <main>
-    <section class="project_page_project_header">
+    <section class="project_page_project_header project_page_project_header_pingo">
       <div class="project_page_project_description">
         <h2>Year</h2>
         <ul>
@@ -45,7 +45,7 @@
   </main>
 
   <footer class="project_page_footer">
-    <a class="back_to_main" href="index.html">Back to main</a>
+    <a class="back_to_main back_to_main_pingo" href="index.html">Back to main</a>
   </footer>
 
 </body>
