--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,7 @@
       <img class="footer_img" src="image/profile_img.jpg" alt="profile_img">
     </section>
       
-    <div><a class="back_to_main" href="index.html">Back to main</a></div>
+    <div><a class="back_to_main back_to_main_about" href="index.html">Back to main</a></div>
 </main>
 
 </body>
