--- a/svolta_page.html
+++ b/svolta_page.html
@@ -34,7 +34,7 @@
       <img class="project_page_description_img project_page_description_img_svolta" src="image/Svolta/render 1.png" alt="render_1">
     </section>
 
-    <section class="project_page_project_list ">
+    <section class="project_page_project_list j-project_img_list" id="j-project_img_trigger">
       <img class="project_page_project_img project_page_project_img_svolta" src="image/Svolta/render 2.png" alt="render_2">
       <img class="project_page_project_img project_page_project_img_svolta" src="image/Svolta/render 8.png" alt="render_8">
       <img class="project_page_project_img project_page_project_img_svolta" src="image/Svolta/render 9.png" alt="render_9">
