--- a/videomaking_page.html
+++ b/videomaking_page.html
@@ -37,7 +37,7 @@
 
     </section>
 
-    <section class="project_page_project_list ">
+    <section class="project_page_project_list j-project_img_list" id="j-project_img_trigger">
       <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/Splash_page.JPG" alt="splash page">
       <a class="go_see_it" href="https://www.youtube.com/watch?v=Agjj5b88GcA">Go See It</a>
       <img  class="project_page_project_img project_page_video_img" src="image/Videomaking/screen_video.JPG" alt="giostra">
