--- a/fendi_page.html
+++ b/fendi_page.html
@@ -34,7 +34,7 @@
       <img class="project_page_description_img project_page_description_img_fendi j-projectpg_fendi_img" src="image/Fendi/Fendi_splash_page.png" alt="Fendi_splash_image">
     </section>
 
-    <section class="project_page_project_list">
+    <section class="project_page_project_list j-project_img_list" id="j-project_img_trigger">
       <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/Fendi_with_Ipad.png" alt="Fendi_with_Ipad">
       <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/Fendi_selector.png" alt="Fendi_selector">
       <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/Fendi_with_Ipad_3.png" alt="Fendi:_with_Ipad_3">
