--- a/the_fork_page.html
+++ b/the_fork_page.html
@@ -11,7 +11,7 @@
 
   <header  class="project_page_header">
     <h1 class="project_page_title">The Fork</h1>
-    <p>Redesign the proces of creating new personalized bags for Fendi clients.</p>
+    <p>Redesigning the whole The Fork application</p>
   </header>
 
   <main>
@@ -34,7 +34,7 @@
       <img class="project_page_description_img project_page_description_img_thefork" src="image/The Fork/Main_the_fork.png" alt="Main_the_fork">
     </section>
 
-    <section class="project_page_project_list">
+    <section class="project_page_project_list j-project_img_list" id="j-project_img_trigger">
       <img class="project_page_project_img project_page_project_img_thefork" src="image/The Fork/Restaurant_the_fork.png" alt="Restaurant_the_fork">
       <img class="project_page_project_img project_page_project_img_thefork" src="image/The Fork/Profile_the_fork.png" alt="Profile_the_fork">
       <img class="project_page_project_img project_page_project_img_thefork" src="image/The Fork/Map_the_fork.png" alt="Map_the_fork">
@@ -45,6 +45,15 @@
   <footer class="project_page_footer">
     <a class="back_to_main back_to_main_thefork" href="index.html">Back to main</a>
   </footer>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineMax.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+
+  <script src="/Script/fendi_page_animation.js"></script>
 
 </body>
 </html>
