--- a/about_me.html
+++ b/about_me.html
@@ -13,14 +13,17 @@
     <section class="my_description">
       <div class="footer_description">
         <h2 class="footer_title" id="who">Matteo <em>Cordiner</em></h2>
-        <p class="footer_text">I am 22 years old from Rome. I studied Product Design done in Rome at the IED (European Institut of Design). Where i took a bachelor degree.
+        <p class="footer_text">I am 22 years old, from Rome. I studied Product Design at the IED (European Institut of Design), where i graduated with a bachelor degree.
         Now i am doing a master in Web and Digital Design in Milan at the Scuola Politecnica di Design.
-        I look to become a UX/UI Designer and to develop my own business thanks to the new skills owned during this Master. </p>
+        I look to became a UX/UI Designer working in Italy or even better abroad. 
+        I speak 3 languages as: Italian, French and English. <em> Hope you will enjoy my profile.</em></p>
       </div>
 
-      <img class="footer_img" src="image/profile_img.jpg" alt="profile_img">
+      <div class="footer_background_img">
+        <img class="footer_img" src="image/profile_img.jpg" alt="profile_img">
+      </div>
     </section>
-      
+    
     <div><a class="back_to_main back_to_main_about" href="index.html">Back to main</a></div>
 </main>
 
