--- a/pingo_page.html
+++ b/pingo_page.html
@@ -11,7 +11,7 @@
 
   <header class="project_page_header">
     <h1 class="project_page_title">PinGo</h1>
-    <p>Creation of a Web Site for a travell planning Bussiness</p>
+    <p>Creation of a Web Site for a travel planning Bussiness</p>
   </header>
 
   <main>
@@ -47,6 +47,14 @@
   <footer class="project_page_footer">
     <a class="back_to_main back_to_main_pingo" href="index.html">Back to main</a>
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineMax.min.js"></script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+
+  <script src="Script/fendi_page_animation.js"></script>
 
 </body>
 </html>
