--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
       
     <div class="info_img" id="j-img_fendi_trigger">
-      <img class="project_img j-img_fendi" src="image/Fendi/Fendi_splash_page.png" alt="background_project">
+      <img class="project_img project_img_fendi j-img_fendi" src="image/Fendi/Fendi_splash_page.png" alt="background_project">
     </div>
   
     
