--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <div class="info_img_pingo" id="j-img_pingo_trigger">
-      <img class="project_img img_pingo j-img_pingo" src="image/PinGo/Homepage.JPG" alt="background_project">
+      <img class="project_img img_pingo j-img_pingo" src="image/PinGo/Homepage.png" alt="background_project">
     </div>
       
   
