--- a/pingo_page.html
+++ b/pingo_page.html
@@ -32,15 +32,15 @@
         </ul>
       </div>
       
-      <img class="project_page_description_img project_page_description_img_pingo" src="image/PinGo/Homepage.JPG" alt="PinGo_home_page">
+      <img class="project_page_description_img project_page_description_img_pingo" src="image/PinGo/Homepage.png" alt="PinGo_home_page">
     </section>
 
     <section class="project_page_project_list j-project_img_list" id="j-project_img_trigger">
-      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo1.JPG" alt="Pingo1">
-      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo2.JPG" alt="Pingo2">
-      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo3.JPG" alt="Pingo4">
-      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo4.JPG" alt="Pingo4">
-      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo5.JPG" alt="Pingo5">
+      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo1.png" alt="Pingo1">
+      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo2.png" alt="Pingo2">
+      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo3.png" alt="Pingo4">
+      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo4.png" alt="Pingo4">
+      <img class="project_page_project_img project_page_project_img_pingo" src="image/PinGo/Pingo5.png" alt="Pingo5">
     </section>
   </main>
 
