--- a/about_me.html
+++ b/about_me.html
@@ -13,7 +13,7 @@
     <section class="my_description">
       <div class="footer_description">
         <h2 class="footer_title" id="who">Matteo <em>Cordiner</em></h2>
-        <p class="footer_text">I am 22 years old, from Rome. I studied Product Design at the IED (European Institut of Design), where i graduated with a bachelor degree.
+        <p class="footer_text">I am 22 years old, from Rome. I studied Product Design at IED (European Institut of Design), where i graduated with a bachelor degree.
         Now i am doing a master in Web and Digital Design in Milan at the Scuola Politecnica di Design.
         I look to became a UX/UI Designer working in Italy or even better abroad. 
         I speak 3 languages as: Italian, French and English. <em> Hope you will enjoy my profile.</em></p>
