--- a/fendi_page.html
+++ b/fendi_page.html
@@ -40,6 +40,10 @@
       <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/Fendi_with_Ipad_3.png" alt="Fendi:_with_Ipad_3">
       <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/Fendi_with_Ipad2.png" alt="Fendi_with_Ipad2">
       <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/Fendi_with_Ipad4.png" alt="Fendi_form">
+      <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/mockuper.png" alt="mockup1">
+      <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/mockuper (1).png" alt="mockup2">
+      <img class="project_page_project_img project_page_project_img_fendi" src="image/Fendi/mockuper3.png" alt="mockup3">
+      
     </section>
   </main>
 
